--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="app.js" defer></script>
+    <title>RPS</title>
 </head>
 <body>
-    <script src="./app.js"></script>
 </body>
 </html>
